--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -54,7 +54,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
-                        android:layout_marginTop="10dp"
+                        android:layout_alignTop="@id/title"
                         android:contentDescription="@string/image"
                         android:scaleType="centerCrop"
                         android:src="@drawable/ic_back_white" />
@@ -70,15 +70,15 @@
                         android:gravity="center"
                         android:text="@string/categories"
                         android:textColor="@color/white"
-                        android:textSize="30sp"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
 
                     <androidx.coordinatorlayout.widget.CoordinatorLayout
                         android:id="@+id/cl_cart"
-                        android:layout_width="33dp"
-                        android:layout_height="30dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginTop="5dp">
+                        android:layout_width="26dp"
+                        android:layout_alignTop="@id/title"
+                        android:layout_height="26dp"
+                        android:layout_alignParentEnd="true">
 
                         <ImageView
                             android:id="@+id/img_cart"
@@ -90,95 +90,8 @@
                             app:tint="@color/white"
                             tools:ignore="RtlHardcoded" />
 
-                        <TextView
-                            android:layout_width="14dp"
-                            android:layout_height="14dp"
-                            android:layout_gravity="end|top"
-                            android:background="@drawable/bg_quantity_in_cart"
-                            android:text="@string/defaultCartNumber"
-                            android:textAlignment="center"
-                            android:textColor="@color/white"
-                            android:textSize="10sp"
-                            tools:ignore="RtlCompat,SmallSp" />
                     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/search_bar"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="match_parent"
-                        android:layout_height="38dp"
-                        android:layout_below="@+id/title"
-                        android:layout_marginTop="9dp"
-                        app:boxStrokeColor="@color/disable_pray"
-                        app:boxStrokeWidth="1dp"
-                        app:boxStrokeWidthFocused="2dp"
-                        app:hintAnimationEnabled="false"
-                        app:hintEnabled="false"
-                        app:startIconDrawable="@drawable/ic_search">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:layout_height="38dp"
-                            android:background="@drawable/bg_search"
-                            android:editable="false"
-                            android:padding="0dp"
-                            android:text="@string/search"
-                            android:textColor="@color/disable_pray" />
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/search_bar"
-                        android:layout_alignParentStart="true"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="10dp">
-
-                        <ImageView
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
-                            android:layout_marginEnd="10dp"
-                            android:contentDescription="@string/app_name"
-                            android:src="@drawable/ic_filter" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="10dp"
-                            android:text="@string/sort_by"
-                            android:textColor="@color/white"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
-
-                        <androidx.appcompat.widget.AppCompatButton
-                            android:layout_width="46dp"
-                            android:layout_height="25dp"
-                            android:layout_marginEnd="8dp"
-                            android:background="@drawable/bg_btn_filter"
-                            android:text="@string/rating"
-                            android:textAllCaps="false"
-                            android:textColor="@color/white"
-                            android:textSize="13sp" />
-
-                        <androidx.appcompat.widget.AppCompatButton
-                            android:layout_width="69dp"
-                            android:layout_height="25dp"
-                            android:layout_marginEnd="8dp"
-                            android:background="@drawable/bg_btn_filter"
-                            android:text="@string/purchased"
-                            android:textAllCaps="false"
-                            android:textColor="@color/white"
-                            android:textSize="13sp" />
-
-                        <androidx.appcompat.widget.AppCompatButton
-                            android:layout_width="55dp"
-                            android:layout_height="25dp"
-                            android:background="@drawable/bg_btn_filter"
-                            android:text="@string/product"
-                            android:textAllCaps="false"
-                            android:textColor="@color/white"
-                            android:textSize="13sp" />
-                    </LinearLayout>
                 </RelativeLayout>
             </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
