--- a/app/src/main/res/layout/fragment_check_out.xml
+++ b/app/src/main/res/layout/fragment_check_out.xml
@@ -68,7 +68,7 @@
                         android:gravity="center"
                         android:text="@string/check_out"
                         android:textColor="@color/white"
-                        android:textSize="30sp"
+                        android:textSize="25sp"
                         android:textStyle="bold" />
                 </RelativeLayout>
             </androidx.appcompat.widget.Toolbar>
@@ -121,6 +121,7 @@
                 android:layout_marginBottom="20dp"
                 android:ellipsize="end"
                 android:maxLines="5"
+                android:textColor="@{viewModel.isValidAddress ? @color/black: @color/red}"
                 android:paddingVertical="5dp"
                 android:text="@{viewModel.currentOrder.address}"
                 android:textSize="14sp" />
