--- a/app/src/main/res/layout/fragment_detail_order.xml
+++ b/app/src/main/res/layout/fragment_detail_order.xml
@@ -56,7 +56,7 @@
                         android:text="@string/order_detail"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
-                        android:textSize="25sp"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -308,7 +308,7 @@
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginVertical="10dp"
                 android:background="@drawable/bg_btn_received"
-                android:text="@string/rating_now"
+                android:text="@string/pay_now"
                 android:textAllCaps="true"
                 android:textColor="@color/primary_green"
                 android:textSize="16sp"
