--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -60,13 +60,14 @@
 
                                 <ImageView
                                     android:id="@+id/img_back"
-                                    android:layout_alignParentStart="true"
-                                    android:layout_marginTop="10dp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_alignParentStart="true"
+                                    android:layout_alignParentTop="true"
+                                    android:layout_marginTop="5dp"
                                     android:contentDescription="@string/image"
                                     android:scaleType="centerCrop"
-                                    android:src="@drawable/ic_back_white"/>
+                                    android:src="@drawable/ic_back_white" />
 
                                 <TextView
                                     android:id="@+id/title"
@@ -77,13 +78,13 @@
                                     android:layout_marginEnd="50dp"
                                     android:text="@string/search"
                                     android:textColor="@color/white"
-                                    android:textSize="30sp"
+                                    android:textSize="25sp"
                                     android:textStyle="bold" />
 
                                 <androidx.coordinatorlayout.widget.CoordinatorLayout
                                     android:id="@+id/cl_cart"
-                                    android:layout_width="33dp"
-                                    android:layout_height="30dp"
+                                    android:layout_width="26dp"
+                                    android:layout_height="26dp"
                                     android:layout_marginTop="5dp"
                                     android:layout_alignParentEnd="true">
                                     <ImageView
@@ -95,16 +96,6 @@
                                         android:src="@drawable/ic_cart"
                                         android:id="@+id/img_cart"
                                         tools:ignore="RtlHardcoded" />
-                                    <TextView
-                                        android:layout_gravity="right|top"
-                                        android:layout_width="14dp"
-                                        android:layout_height="14dp"
-                                        android:background="@drawable/bg_quantity_in_cart"
-                                        android:textSize="10dp"
-                                        android:text="1"
-                                        android:textAlignment="center"
-                                        android:textColor="@color/white"
-                                        tools:ignore="RtlCompat" />
                                 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
                                 <com.google.android.material.textfield.TextInputLayout
@@ -150,41 +141,36 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_marginEnd="10dp"
-                                        android:text="Sort by:"
+                                        android:text="@string/sort_by"
                                         android:textColor="@color/white"
                                         android:textSize="14dp"
                                         android:textStyle="bold" />
 
-                                    <androidx.appcompat.widget.AppCompatButton
-                                        android:id="@+id/btn_sort_by_rating"
-                                        android:layout_width="46dp"
-                                        android:layout_height="25dp"
-                                        android:layout_marginEnd="8dp"
-                                        android:background="@drawable/bg_btn_filter"
-                                        android:text="Rating"
-                                        android:textAllCaps="false"
-                                        android:textColor="@color/white"
-                                        android:textSize="13dp" />
-
-                                    <androidx.appcompat.widget.AppCompatButton
+                                    <ToggleButton
                                         android:id="@+id/btn_sort_by_purchased"
-                                        android:layout_width="69dp"
+                                        android:layout_width="100dp"
                                         android:layout_height="25dp"
                                         android:layout_marginEnd="8dp"
-                                        android:background="@drawable/bg_btn_filter"
-                                        android:text="Purchased"
+                                        android:background="@drawable/selector_string_property_value"
+                                        android:text="Lượt mua nhiều"
+                                        android:textOn="Lượt mua nhiều"
+                                        android:textOff="Lượt mua nhiều"
+                                        android:checked="@{viewModel.sortByPurchased}"
                                         android:textAllCaps="false"
-                                        android:textColor="@color/white"
+                                        android:textColor="@{viewModel.sortByPurchased? @color/yellow:@color/white}"
                                         android:textSize="13dp" />
 
-                                    <androidx.appcompat.widget.AppCompatButton
+                                    <ToggleButton
                                         android:id="@+id/btn_sort_by_price"
-                                        android:layout_width="55dp"
+                                        android:layout_width="90dp"
                                         android:layout_height="25dp"
-                                        android:background="@drawable/bg_btn_filter"
-                                        android:text="Product"
+                                        android:background="@drawable/selector_string_property_value"
+                                        android:text="Giá tiền thấp"
+                                        android:textOn="Giá tiền thấp"
+                                        android:textOff="Giá tiền thấp"
+                                        android:checked="@{viewModel.sortByPrice}"
                                         android:textAllCaps="false"
-                                        android:textColor="@color/white"
+                                        android:textColor="@{viewModel.sortByPrice? @color/yellow:@color/white}"
                                         android:textSize="13dp" />
                                 </LinearLayout>
                             </RelativeLayout>
