--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -12,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/item"
         android:layout_width="match_parent"
-        android:layout_height="260dp"
+        android:layout_height="170dp"
         android:background="#00000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,69 +49,29 @@
                     indicatorSize="@{category.images.size()}"
                     android:layout_width="wrap_content"
                     android:layout_height="15dp"
-                    android:layout_marginTop="10dp"
                     app:ci_drawable="@drawable/bg_cycle_indicator"
+                    android:layout_marginBottom="5dp"
                     app:ci_drawable_unselected="@drawable/bg_cycle_unselected_indicator"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageViewPager"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageViewPager" />
+                    app:layout_constraintStart_toEndOf="@+id/categoryName" />
 
                 <TextView
                     android:id="@+id/categoryName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="13dp"
+                    android:paddingVertical="5dp"
+                    android:textStyle="bold"
+                    android:paddingHorizontal="15dp"
                     android:text="@{category.name}"
-                    android:textAllCaps="true"
-                    android:textColor="@color/black"
+                    android:background="@color/primary_green"
+                    android:textColor="@color/white"
                     android:textFontWeight="@integer/material_motion_duration_long_2"
-                    android:textSize="25sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/indicator" />
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageViewPager"
+                    app:layout_constraintStart_toStartOf="parent" />
 
-                <TextView
-                    android:id="@+id/totalPurchase"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="13dp"
-                    android:layout_marginTop="3dp"
-                    android:text="@{category.displayToTalPurchase()}"
-                    android:textColor="@color/dark_pray"
-                    android:textFontWeight="@integer/material_motion_duration_long_2"
-                    android:textSize="13sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/categoryName" />
 
-                <TextView
-                    android:id="@+id/totalProduct"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="13dp"
-                    android:layout_marginTop="3dp"
-                    android:text="@{category.displayToTalProduct()}"
-                    android:textColor="@color/dark_pray"
-                    android:textFontWeight="@integer/material_motion_duration_long_2"
-                    android:textSize="13sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/categoryName" />
-
-                <RatingBar
-                    android:id="@+id/rating"
-                    style="@style/Widget.AppCompat.RatingBar.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="13dp"
-                    android:layout_marginTop="4dp"
-                    android:isIndicator="true"
-                    android:numStars="5"
-                    android:progressTint="@color/yellow"
-                    android:rating="@{category.rating}"
-                    android:secondaryProgressTint="@color/yellow"
-                    android:stepSize="0.5"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/categoryName" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
