--- a/app/src/main/res/layout/splash_main.xml
+++ b/app/src/main/res/layout/splash_main.xml
@@ -13,6 +13,7 @@
         android:contentDescription="@string/slogan"
         android:layout_marginBottom="50dp"
         android:layout_width="match_parent"
+        android:layout_marginHorizontal="20dp"
         android:layout_height="300dp"
         android:src="@drawable/ic_app"
         app:layout_constraintBottom_toBottomOf="parent"
