fix address check out

--- a/app/src/main/res/layout/fragment_choose_address.xml
+++ b/app/src/main/res/layout/fragment_choose_address.xml
@@ -165,6 +165,6 @@
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="normal" />
     </RelativeLayout>
 </layout>
