online payment confirmation

--- a/app/src/main/res/layout/fragment_cancel_order_confirm.xml
+++ b/app/src/main/res/layout/fragment_cancel_order_confirm.xml
@@ -7,46 +7,17 @@
         android:layout_height="match_parent"
         android:background="@color/primary_green"
         tools:context=".uicontroler.fragment.CancelOrderSuccessFragment">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="35sp"
-                android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="@string/slogan"
-                android:textAllCaps="true"
-                android:textColor="@color/white" />
-        </LinearLayout>
         <LinearLayout
             android:id="@+id/linearLayout4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/image"
-                android:src="@drawable/ic_app" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView4">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -90,5 +61,19 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
 
         </androidx.appcompat.widget.AppCompatButton>
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:contentDescription="@string/image"
+            android:src="@drawable/ic_app"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.25"
+            app:tint="@color/white" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
