--- a/app/src/main/res/layout/fragment_check_out.xml
+++ b/app/src/main/res/layout/fragment_check_out.xml
@@ -96,7 +96,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_toStartOf="@+id/img_edit_address"
                     android:text="@string/address"
-                    android:textColor="#272422"
+                    android:textColor="@color/black"
                     android:textSize="16sp" />
 
                 <ImageView
@@ -128,10 +128,61 @@
         </LinearLayout>
 
         <RelativeLayout
+            android:id="@+id/paymentMethod"
+            android:layout_below="@+id/address"
+            android:layout_marginTop="10dp"
+            android:paddingHorizontal="10dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="15dp"
+            android:background="@drawable/bg_address_in_checkout"
+            android:layout_marginHorizontal="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/paymentMethodLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginBottom="5dp"
+                android:text="@string/paymentMethod"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_below="@id/paymentMethodLabel"
+                android:layout_marginStart="10dp"
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:alpha="1"
+                app:boxStrokeColor="@color/white"
+                android:textSize="14sp"
+                app:endIconDrawable="@drawable/ic_drop"
+                android:background="@null"
+                app:endIconTint="@color/primary_green"
+                app:hintTextColor="@color/black">
+
+                <AutoCompleteTextView
+                    android:id="@+id/paymentMethodSelectionView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/bg_transparent"
+                    android:backgroundTint="@color/white"
+                     android:layout_marginBottom="-2dp"
+                    android:gravity="center_vertical"
+                    android:inputType="none"
+                    android:paddingTop="2dp"
+                    android:paddingStart="0dp"
+                    android:textSize="14sp"
+                    tools:ignore="LabelFor" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@id/btn_confirm"
-            android:layout_below="@id/address"
+            android:layout_below="@id/paymentMethod"
             android:layout_marginHorizontal="10dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/bg_address_in_checkout"
@@ -151,7 +202,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_toStartOf="@id/img_cart_2"
                     android:text="@string/items"
-                    android:textColor="#272422"
+                    android:textColor="@color/black"
                     android:textSize="16sp" />
 
                 <ImageView
@@ -224,6 +275,19 @@
             </RelativeLayout>
         </RelativeLayout>
 
+        <LinearLayout
+            android:id="@+id/payment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/appBarLayout"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bg_address_in_checkout"
+            android:orientation="vertical"
+            android:paddingHorizontal="20dp">
+
+        </LinearLayout>
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_confirm"
             android:layout_width="match_parent"
@@ -235,12 +299,12 @@
             android:background="@drawable/bg_confirm_check_out"
             android:drawableEnd="@drawable/ic_arrow_right"
             android:paddingHorizontal="20dp"
-            android:text="@string/confirm"
+            android:text="@string/check_out"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textSize="16sp"
+            android:textStyle="normal" />
     </RelativeLayout>
 
 </layout>
