--- a/app/src/main/res/layout/fragment_online_check_out_information.xml
+++ b/app/src/main/res/layout/fragment_online_check_out_information.xml
@@ -23,7 +23,7 @@
         android:layout_height="match_parent"
         android:background="@color/back_ground"
         android:orientation="vertical"
-        tools:context=".uicontroler.fragment.AddressFragment">
+        >
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
@@ -274,6 +274,51 @@
 
                         <ImageView
                             android:id="@+id/receiverCopy"
+                            android:src="@drawable/ic_copy"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            app:tint="@color/dark_pray"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"/>
+
+                    </RelativeLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/bankingContentLayout"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintEnd_toEndOf="parent"
+
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/accountNumberId">
+                    <TextView
+                        android:text="@string/bankingContent"
+                        android:textSize="16sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <RelativeLayout
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/bg_edit_user_detail"
+                        android:paddingVertical="5dp"
+                        android:layout_gravity="end"
+                        android:paddingHorizontal="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:textSize="20sp"
+                            android:id="@+id/bankingContent"
+                            android:layout_centerVertical="true"
+                            android:layout_toStartOf="@+id/bankingContentCopy"
+                            android:layout_marginEnd="5dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+
+                        <ImageView
+                            android:id="@+id/bankingContentCopy"
                             android:src="@drawable/ic_copy"
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
